--- a/recovery/root/init.recovery.exynos9611.rc
+++ b/recovery/root/init.recovery.exynos9611.rc
@@ -1,7 +1,7 @@
 on fs
     export ANDROID_ROOT /system
 
-on init
-    write /proc/sys/kernel/hung_task_timeout_secs 0
-
-on boot
+    wait /dev/block/platform/13520000.ufs
+    symlink /dev/block/platform/13520000.ufs /dev/block/bootdevice
+    symlink /dev/block/platform/13520000.ufs/by-name /dev/block/by-name
+    symlink /dev/block/platform/13520000.ufs/by-name/param /dev/block/param
